docs_src/98.wip/sabnzbd/sab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-tcp
  namespace: media
  labels:
    app: sabnzbd
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.124
  externalTrafficPolicy: Local
  ports:
    - name: sabnzbd
      port: 8080
      protocol: TCP
      targetPort: sabnzbd
  selector:
    app: sabnzbd
  sessionAffinity: None
