docs_src/98.wip/sabnzbd/sab-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sabnzbd-external-ingress
  namespace: media
  labels:
    app: sabnzbd
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - sabnzbd.yarr.wtf
    secretName: sabnzbd-certs
  rules:
  - host: sabnzbd.yarr.wtf
    http:
      paths:
      - path: /
        backend:
          serviceName: sabnzbd-tcp
          servicePort: sabnzbd
